--- a/SmartTechShopManagement/SmartTechShopManagement.csproj
+++ b/SmartTechShopManagement/SmartTechShopManagement.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataAccess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
