--- a/SmartTechShopManagement/SmartTechShopManagement.csproj
+++ b/SmartTechShopManagement/SmartTechShopManagement.csproj
@@ -54,7 +54,12 @@
       <DependentUpon>AdminDashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
-    <Compile Include="Enum\DashboardSource.cs" />
+    <Compile Include="Regestration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Regestration.Designer.cs">
+      <DependentUpon>Regestration.cs</DependentUpon>
+    </Compile>
     <Compile Include="SalesmanDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,12 +67,11 @@
       <DependentUpon>SalesmanDashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="DataAccess.cs" />
-    <Compile Include="Enum\UserRole.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
@@ -92,11 +96,14 @@
     <EmbeddedResource Include="AdminDashboard.resx">
       <DependentUpon>AdminDashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Regestration.resx">
+      <DependentUpon>Regestration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SalesmanDashboard.resx">
       <DependentUpon>SalesmanDashboard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
